<resources>
    <string name="actions">Actions</string>
    <string name="active">Active</string>
    <string name="address">Address</string>
    <string name="adjust_10_degrees">10</string>
    <string name="adjust_25_degrees">25</string>
    <string name="agent">Agent</string>
    <string name="alert">Alert</string>
    <string name="all">All</string>
    <string name="ally_sorting">Ally sorting</string>
    <string name="ally_status_ambassador_for_pirate">
        Pirate boss on board. Send shuttle to rescue.
    </string>
    <string name="ally_status_ambassador_for_tsn">
        Ambassador on board. Send shuttle to rescue.
    </string>
    <string name="ally_status_blind">Flying blind. Guide to a station.</string>
    <string name="ally_status_commandeered_in_nebula">
        Commandeered. Approach in nebula to liberate crew.
    </string>
    <string name="ally_status_commandeered_not_in_nebula">
        Commandeered. Do not approach now, or it will self-destruct. Wait until it enters a nebula,
        then approach.
    </string>
    <string name="ally_status_contraband_for_pirate">
        Pirate contraband detected. Keep warships away.
    </string>
    <string name="ally_status_contraband_for_tsn">
        Pirate contraband detected. Send a warship to intercept.
    </string>
    <string name="ally_status_data_for_pirate">Secure data detected. Do not approach.</string>
    <string name="ally_status_data_for_tsn">
        Secure data detected. Do not permit enemy ships to intercept.
    </string>
    <string name="ally_status_deep_strike">Friendly ship, ready to assist in Deep Strike.</string>
    <string name="ally_status_fighter_trap">
        Fighter trap. Do not approach under any circumstances.
    </string>
    <string name="ally_status_hostage">
        Crew taken hostage. Captors demand 900 energy units in ransom.
    </string>
    <string name="ally_status_malfunction">
        Onboard computer is malfunctioning. Use EMP to reset it.
    </string>
    <string name="ally_status_mine_trap">
        Mine trap. Do not approach under any circumstances.
    </string>
    <string name="ally_status_needs_damcon">
        Damages detected. Requesting DamCon team member to conduct repairs.
    </string>
    <string name="ally_status_needs_energy">
        Out of energy. Requesting 100 units to start moving.
    </string>
    <string name="ally_status_normal">Friendly ship, ready to accept orders.</string>
    <string name="ally_status_repairing">Friendly ship, currently undergoing repairs.</string>
    <string name="ally_status_reward">
        Friendly ship, en route to a station to deliver a reward for your assistance.
    </string>
    <string name="alive">Alive</string>
    <string name="artemis_version_not_supported">Artemis %1$s not supported</string>
    <string name="attack_nearest_enemy">Attack</string>
    <string name="audio">Audio</string>
    <string name="auto_dismissal">Auto-dismissal</string>
    <string name="available_servers">Available servers</string>
    <string name="avoid_all">Avoid/Ignore All</string>
    <string name="avoidance_black_hole">Black holes</string>
    <string name="avoidance_mine">Mines</string>
    <string name="avoidance_typhon">Typhons</string>
    <string name="avoidances">Avoidances</string>
    <string-array name="avoidance_entries">
        <item>Black holes</item>
        <item>Mines</item>
        <item>Typhons</item>
    </string-array>
    <string-array name="avoidance_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="back">Back</string>
    <string name="biomech_rage">Status: %1$s</string>
    <string name="biomechs">Biomechs</string>
    <string name="biomech_cannot_freeze">Freeze limit reached; cannot freeze again</string>
    <string name="biomech_frozen">Frozen - reanimation estimated in %1$d:%2$02d</string>
    <string name="biomech_moving">Mobile; touch to freeze</string>
    <string name="biomech_notification">Reanimation imminent.</string>
    <string name="biomech_will_move">Frozen - reanimation imminent</string>
    <string name="border_war_status">Border War: %1$s</string>
    <string name="build">Build</string>
    <string name="build_timer">ready in %1$d:%2$02d</string>
    <string name="building">Building:</string>
    <string name="cancel">Cancel</string>
    <string name="cannot_taunt">Cannot taunt</string>
    <string name="channel_allies_deep_string">Deep Strike production</string>
    <string name="channel_biomech_moving">Reanimation alert</string>
    <string name="channel_connection">Connection</string>
    <string name="channel_game_info">Game info</string>
    <string name="channel_game_over">Game over</string>
    <string name="channel_group_allies">Allies</string>
    <string name="channel_group_biomechs">Biomechs</string>
    <string name="channel_group_important">Important</string>
    <string name="channel_group_missions">Missions</string>
    <string name="channel_group_stations">Stations</string>
    <string name="channel_mission_completed">Mission completed</string>
    <string name="channel_mission_progress">Mission progress</string>
    <string name="channel_mission_new">New mission</string>
    <string name="channel_station_destroyed">Station destroyed</string>
    <string name="channel_station_production">Missile production</string>
    <string name="channel_station_attack">Station under attack</string>
    <string name="check_for_updates">Check for updates</string>
    <string name="click_scan">Press Scan to listen for broadcasting servers.</string>
    <string name="closest_station">Closest: %1$s</string>
    <string name="colon">:</string>
    <string name="command">Command</string>
    <string name="completed">Completed</string>
    <string name="completed_mission_dismissal">Completed mission auto-dismissal</string>
    <string name="connect">Connect</string>
    <string name="connect_timeout">Connect timeout</string>
    <string name="connected">Connected!</string>
    <string name="connecting">Connecting…</string>
    <string name="connection_closed">Connection closed</string>
    <string name="connection_lost">Connection lost, trying to reconnect…</string>
    <string name="connection_timeout">Connection timeout</string>
    <string name="currently_moving_to_attack">Currently moving to attack %1$s.</string>
    <string name="currently_moving_to_heading">Currently moving to heading %1$s.</string>
    <string name="currently_moving_toward">Currently moving toward %1$s.</string>
    <string name="default_setting">Default</string>
    <string name="destroyed">Destroyed</string>
    <string name="direction">DIR %1$s</string>
    <string name="disable_ineffective_taunts">Disable ineffective taunts</string>
    <string name="disconnect_io_error">
        An I/O error has occurred. You have been disconnected from the server.\n\nError: %1$s
    </string>
    <string name="disconnect_parse">
        An unexpected error has occurred. You have been disconnected from the server.\n\nError: %1$s
    </string>
    <string name="disconnect_remote">The server has been terminated.</string>
    <string name="disconnect_unknown_error">
        An unknown error has occurred while trying to send a packet to the server. There may be a
        bug in Artemis Agent. Please report the issue on GitHub.\n\nError: %1$s
    </string>
    <string name="disconnect_unsupported_version_old">
        Artemis Agent only supports Artemis version %1$s or higher. You have been disconnected from
        the server because its version of Artemis is too old (%2$s).
    </string>
    <string name="disconnect_unsupported_version_new">
        You have been disconnected from the server because it runs Artemis version %1$s, which is
        beyond what Artemis Agent currently supports. An update to Artemis Agent is recommended.
    </string>
    <string name="dismiss">Dismiss</string>
    <string name="displayed_rewards">Displayed rewards</string>
    <string name="docked">Docked</string>
    <string name="docking">Docking</string>
    <string name="enable_routing">Enable routing</string>
    <string name="enable_sound_effects">Enable sound effects</string>
    <string name="enemy">Enemy</string>
    <string name="enemy_status_brave">Brave</string>
    <string name="enemy_status_cowardly">Cowardly</string>
    <string name="enemy_status_duplicitous">Duplicitous</string>
    <string name="enemy_status_easily_offended">Easily offended</string>
    <string name="enemy_status_no_intel">No intel; second scan required</string>
    <string name="enemy_status_normal">Normal</string>
    <string name="exit_message">You will be disconnected from the server. Confirm exit?</string>
    <string name="failed_to_connect">Failed to connect</string>
    <string name="fighters">Fighters</string>
    <string name="freeze_duration">Freeze duration</string>
    <string name="friendly">Friendly</string>
    <string name="front_shield">F %1$.0f/%2$.0f</string>
    <string name="game">Game</string>
    <string name="go_defend">Go defend:</string>
    <string name="hail">Hail</string>
    <string name="has_energy">Has energy.</string>
    <string name="has_ordnance">Has ordnance.</string>
    <string name="heartbeat_timeout">Heartbeat timeout</string>
    <string name="help">Help</string>
    <string-array name="help_contents_about">
        <item>
            Written by Jordan Longstaff\n
        </item>
        <item>
            Special thanks to Robert J. Walker for writing the IAN (Interface for Artemis
            Networking) library, without which this app could not exist. IAN is available on GitHub.
            \n
        </item>
        <item>
            \u00a9 Copyright 2024. All rights reserved.
        </item>
    </string-array>
    <string name="manually_return_from_commands">Manually return from commands</string>
    <string name="mission_battery">Battery</string>
    <string name="mission_coolant">Coolant</string>
    <string name="mission_nuke">Nuke</string>
    <string name="mission_production">Production</string>
    <string name="mission_shield">Shield</string>
    <string name="next_to">Next: %1$s %2$s %3$s</string>
    <string name="none">None</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="range">RANGE %1$.0f</string>
    <string name="restore_default_settings">Restore defaults</string>
    <string name="rewards">Rewards: %1$s</string>
    <string name="seconds">sec</string>
    <string name="settings">Settings</string>
    <string name="setup">Setup</string>
    <string name="show_destroyed_allies">Show destroyed allies</string>
    <string name="sort_by_class">Class</string>
    <string name="sort_by_energy">En</string>
    <string name="sort_by_name">Name</string>
    <string name="sort_by_status">Status</string>
    <string name="sort_methods">Sort methods</string>
    <string name="then_to">Then: %1$s %2$s %3$s</string>
</resources>