<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <View
        android:id="@+id/missionTopDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/nextLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/paddingSmall"
        android:maxLines="1"
        android:text="@string/next_to"
        android:textSize="20sp"
        app:autoSizeTextType="uniform"
        app:autoSizeStepGranularity="2sp"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/missionDirectionLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/direction"
        app:layout_constraintEnd_toStartOf="@id/missionRangeLabel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/missionRangeLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nextLabel" />
    <TextView
        android:id="@+id/missionRangeLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/paddingSmall"
        android:gravity="center_horizontal"
        android:text="@string/range"
        app:layout_constraintEnd_toStartOf="@id/missionTimeLabel"
        app:layout_constraintLeft_toRightOf="@id/missionDirectionLabel"
        app:layout_constraintRight_toLeftOf="@id/missionTimeLabel"
        app:layout_constraintStart_toEndOf="@id/missionDirectionLabel"
        app:layout_constraintTop_toBottomOf="@id/nextLabel" />
    <TextView
        android:id="@+id/missionTimeLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/missionRangeLabel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@id/missionRangeLabel"
        app:layout_constraintTop_toBottomOf="@id/nextLabel" />
    <TextView
        android:id="@+id/thenLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.625"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/then_to"
        app:layout_constraintTop_toBottomOf="@id/missionDirectionLabel" />
    <TextView
        android:id="@+id/rewardsLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rewards"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/thenLabel" />
    <View
        android:id="@+id/missionBottomDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
