<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    tools:context=".MainActivity">
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/mainPageSelector"
        app:layout_constraintTop_toTopOf="parent" />
    <RadioGroup
        android:id="@+id/mainPageSelector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">
        <RadioButton
            android:id="@+id/setupPageButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/setup" />
        <RadioButton
            android:id="@+id/gamePageButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/game" />
        <RadioButton
            android:id="@+id/helpPageButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/help" />
    </RadioGroup>
    <View
        android:id="@+id/jumpInputDisabler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.875"
        android:background="?attr/colorPrimaryDark"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>
