<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ToggleButton
        android:id="@+id/settingsOnOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/on"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/settingsBack"
        android:contentDescription="@string/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/settingsPageHeaderDivider"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/actionModeCloseDrawable"
        app:tint="?attr/colorButtonNormal" />
    <TextView
        android:id="@+id/settingsPageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@id/settingsOnOff"
        app:layout_constraintLeft_toRightOf="@id/settingsBack"
        app:layout_constraintStart_toEndOf="@id/settingsBack"
        app:layout_constraintTop_toTopOf="parent" />
    <View
        android:id="@+id/settingsPageHeaderDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/paddingSmall"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@id/settingsOnOff" />
    <View
        android:id="@+id/settingsPageFooterDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/paddingSmall"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@id/settingsReset" />
    <Button
        android:id="@+id/settingsReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/restore_default_settings"
        app:layout_constraintBottom_toTopOf="@id/settingsPageBottomDivider" />
    <ScrollView
        android:id="@+id/settingsScroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@id/settingsPageFooterDivider"
        app:layout_constraintTop_toBottomOf="@id/settingsPageHeaderDivider">
        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/settingsFragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="0dp" />
    </ScrollView>
    <View
        android:id="@+id/settingsPageBottomDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/paddingSmall"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
